@@ -121,9 +121,6 @@
 			<src path="${bootstrapSrc}"/>
 			<src path="${bootstrapSrc_80}"/>
 		</javac>
-		<condition property="addExports" value="--add-exports java.base/jdk.internal.reflect=ALL-UNNAMED" unless:set="is_JDK_VERSION_8">
-			<equals arg1="${JCL_VERSION}" arg2="latest"/>
-		</condition>
 		<property name="addExports" value="--add-exports java.base/jdk.internal.reflect=ALL-UNNAMED" unless:set="is_JDK_VERSION_8"/>
 		<javac srcdir="${bootstrapSrc}" destdir="${bootstrapBuild}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1" unless:set="is_JDK_VERSION_8">
 			<src path="${bootstrapSrc}"/>
